--- a/src/main/resources/templates/user/delOrUpdate.html
+++ b/src/main/resources/templates/user/delOrUpdate.html
@@ -8,22 +8,18 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/userStyles.css">
+    <link rel="stylesheet" href="/css/navStyles.css">
     <script src="/js/getExists.js" defer></script>
     <script src="/js/setReferrer.js" defer></script>
     <script type="text/javascript" src="/js/jquery-3.6.0.min.js"></script> <!-- JS 경로 수정 -->
-    <script>
-        // DOM이 완전히 로드된 후에 실행되도록 설정
+    <script src="/js/nav.js" defer></script>
+    <script th:inline="javascript">
+        let userId = /*[[${userId}]]*/ null;
+        let existYN = /*[[${existYN}]]*/ null;
+        let SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
+        let error = /*[[${msg}]]*/ null;
+
         $(document).ready(function () {
-            const SS_USER_ID = "<%= (String) session.getAttribute("SS_USER_ID") %>"
-
-            if (SS_USER_ID && SS_USER_ID.trim() !== "null") {
-                document.getElementById("loginNav").style.display = "none";
-            } else {
-                document.getElementById("myPageNav").style.display = "none";
-                document.getElementById("logoutNav").style.display = "none";
-            }
-
-            const error = "<%= (String) session.getAttribute("msg") %>";
 
             console.log(error);
 
@@ -43,19 +39,26 @@
 <header></header>
 
 <!-- 네비게이션 바 -->
-<div class="navbar">
-    <!-- 좌측 로고 -->
-    <img src="/nestifyLogo.png" alt="Logo" class="logo">
-
-    <!-- 우측 메뉴 -->
-    <div class="menu">
-        <a href="/user/index">홈</a>
-        <a href="/interior/choose">인테리어</a>
-        <a href="javascript:void(0);" id="loginNav" onclick="setReferrer()">로그인</a>
-        <a href="/user/delOrUpdate" id="myPageNav" >마이페이지</a>
-        <a href="/user/logout" id="logoutNav">로그아웃</a>
+<nav>
+    <div class="nav-content">
+        <div class="nav-group">
+            <a href="/user/index" class="text-left">하루약속</a>
+        </div>
+        <div class="nav-group" id="serviceNav">
+            <a href="#">처방 내역 조회</a>
+            <a href="#">처방 내역 동기화</a>
+            <a href="#">AI 챗봇 상담</a>
+            <a href="#">주변 약국 찾기</a>
+        </div>
+        <div class="nav-group" id="beforeLoginNav">
+            <a href="/user/signin" class="login">로그인 / Login</a>
+        </div>
+        <div class="nav-group after_login" id="afterLoginNav">
+            <a href="#">마이페이지</a>
+            <a href="/user/logout" class="login">로그아웃</a>
+        </div>
     </div>
-</div>
+</nav>
 
 <div class="content_wrapper">
     <div class="content select_menu full_height">
