--- a/src/main/resources/templates/user/reset_pwd.html
+++ b/src/main/resources/templates/user/reset_pwd.html
@@ -65,8 +65,8 @@
 <!-- 네비게이션 바 -->
 <nav>
     <div class="nav-content">
-        <div class="nav-group">
-            <a href="/user/index" class="text-left">하루약속</a>
+        <div class="nav-group same_width justify-left">
+            <a href="/user/index">하루약속</a>
         </div>
         <div class="nav-group" id="serviceNav">
             <a href="#">처방 내역 조회</a>
@@ -74,11 +74,11 @@
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
-        <div class="nav-group" id="beforeLoginNav">
-            <a href="/user/signin" class="login">로그인 / Login</a>
+        <div class="nav-group same_width justify-right" id="beforeLoginNav">
+            <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
         </div>
-        <div class="nav-group after_login" id="afterLoginNav">
-            <a href="#">마이페이지</a>
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
+            <a href="/user/delOrUpdate" style="font-size: x-large" title="마이페이지">👤</a>
             <a href="/user/logout" class="login">로그아웃</a>
         </div>
     </div>
