--- a/src/main/resources/static/css/indexStyles.css
+++ b/src/main/resources/static/css/indexStyles.css
@@ -11,17 +11,51 @@
     box-sizing: border-box;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
+/*html, body {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    font-family: 'Arial', sans-serif;*/
+/*    background-color: var(--primary-color);*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    flex-direction: column;*/
+/*}*/
+html {
     height: 100%;
-    font-family: 'Arial', sans-serif;
-    background-color: var(--primary-color);
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: var(--primary-color);
+}
+
+body {
+    background-color: var(--primary-color);
+    margin: 3.75rem 0 0 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Spoqa Han Sans Neo', 'Spoqa Han Sans JP', sans-serif;
+}
+
+header {
+    width: 100%;
+    max-height: 15%;
+    text-align: center;
+    margin: 0;
+}
+
+footer {
+    width: 100%;
+    max-height: 15%;
+    text-align: center;
 }
 
 .text-left {
@@ -34,7 +68,6 @@ html, body {
 
 .container {
     min-width: 25rem;
-    margin-top: 5rem;
     display: flex;
     flex-wrap: wrap;
     gap: 1.875rem;
