--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -25,13 +25,15 @@
     </script>
 </head>
 <body>
+<header></header>
+
 <nav>
     <div class="nav-content">
         <div class="nav-group same_width justify-left">
             <a href="/user/index">하루약속</a>
         </div>
         <div class="nav-group" id="serviceNav">
-            <a href="#">처방 내역 조회</a>
+            <a href="/health/auth">처방 내역 조회</a>
             <a href="#">처방 내역 동기화</a>
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
@@ -45,8 +47,9 @@
         </div>
     </div>
 </nav>
+
 <div class="container">
-    <a href="#" class="card highlight">
+    <a href="/health/auth" class="card highlight">
         <div class="icon">📋</div>
         <h2>처방 내역 조회</h2>
         <p class="text-white">처방 내역을 확인 하세요<br>복약 관리가 필요한 처방 내역은<br>알림 신청을 통해 관리 받으세요</p>
@@ -67,5 +70,7 @@
         <p>약국 방문이 필요하시면<br>현재 위치 주변의 약국을 찾아보세요</p>
     </a>
 </div>
+
+<footer></footer>
 </body>
 </html>
