--- a/src/main/resources/templates/user/find_id.html
+++ b/src/main/resources/templates/user/find_id.html
@@ -58,7 +58,7 @@
             <a href="#">주변 약국 찾기</a>
         </div>
         <div class="nav-group same_width justify-right" id="beforeLoginNav">
-            <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
+            <a href="#" class="login" onclick="setReferrer()">로그인</a>
         </div>
         <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
             <a href="/user/delOrUpdate" style="font-size: x-large" title="마이페이지">👤</a>
