--- a/src/main/resources/templates/health/result.html
+++ b/src/main/resources/templates/health/result.html
@@ -5,22 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>간편인증</title>
     <link rel="stylesheet" th:href="@{/css/authStyles.css}">
+    <link rel="stylesheet" th:href="@{/css/navStyles.css}">
     <script type="text/javascript" th:src="@{/js/jquery-3.6.0.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/nav.js}" defer></script>
+    <script src="/js/setReferrer.js" defer></script>
+    <script th:inline="javascript">
+        const error = /*[[${error}]]*/ null;
+        const SS_USER_ID = /*[[${session.SS_USER_ID}]]*/ null;
+    </script>
 </head>
 <body>
+
+<!-- 네비게이션 바 -->
 <nav>
     <div class="nav-content">
-        <div class="nav-group">
-            <a href="#">홈</a>
+        <div class="nav-group same_width justify-left">
+            <a href="/user/index">하루약속</a>
         </div>
-        <div class="nav-group">
-            <a href="#">처방 내역 조회</a>
+        <div class="nav-group" id="serviceNav">
+            <a href="/health/auth">처방 내역 조회</a>
             <a href="#">처방 내역 동기화</a>
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
-        <div class="nav-group">
-            <a href="#" class="login">로그인 / Login</a>
+        <div class="nav-group same_width justify-right" id="beforeLoginNav">
+            <a href="/user/signin" class="login" onclick="setReferrer()">로그인</a>
+        </div>
+        <div class="nav-group after_login same_width justify-right" id="afterLoginNav">
+            <a href="/user/delOrUpdate" style="font-size: x-large" title="마이페이지">👤</a>
+            <a href="/user/logout" class="login">로그아웃</a>
         </div>
     </div>
 </nav>
