--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -33,8 +33,8 @@
             <a href="/user/index">하루약속</a>
         </div>
         <div class="nav-group" id="serviceNav">
-            <a href="/health/auth">처방 내역 조회</a>
-            <a href="#">처방 내역 동기화</a>
+            <a href="#">처방 내역 조회</a>
+            <a href="/health/auth">처방 내역 동기화</a>
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
@@ -49,12 +49,12 @@
 </nav>
 
 <div class="container">
-    <a href="/health/auth" class="card highlight">
+    <a href="#" class="card highlight">
         <div class="icon">📋</div>
         <h2>처방 내역 조회</h2>
         <p class="text-white">처방 내역을 확인 하세요<br>복약 관리가 필요한 처방 내역은<br>알림 신청을 통해 관리 받으세요</p>
     </a>
-    <a href="#" class="card">
+    <a href="/health/auth" class="card">
         <div class="icon">🔄</div>
         <h2>처방 내역 동기화</h2>
         <p>약국을 다녀오셨다면<br>처방 내역을 동기화 하세요</p>
