--- a/src/main/resources/templates/user/reset_pwd.html
+++ b/src/main/resources/templates/user/reset_pwd.html
@@ -69,8 +69,8 @@
             <a href="/user/index">하루약속</a>
         </div>
         <div class="nav-group" id="serviceNav">
-            <a href="/health/auth">처방 내역 조회</a>
-            <a href="#">처방 내역 동기화</a>
+            <a href="#">처방 내역 조회</a>
+            <a href="/health/auth">처방 내역 동기화</a>
             <a href="#">AI 챗봇 상담</a>
             <a href="#">주변 약국 찾기</a>
         </div>
@@ -96,7 +96,7 @@
             <div class="form_box">
                 <label class="label_bold" for="input_pwd">비밀번호 / PASSWORD</label>
                 <div class="input_box">
-                    <input type="password" class="input_info" id="input_pwd" name="pwd" placeholder="비밀번호를 입력하세요." required>
+                    <input type="password" class="input_info" id="input_pwd" name="password" placeholder="비밀번호를 입력하세요." required>
                 </div>
             </div>
             <div class="form_box">
