--- a/src/main/resources/static/css/indexStyles.css
+++ b/src/main/resources/static/css/indexStyles.css
@@ -11,18 +11,6 @@
     box-sizing: border-box;
 }
 
-/*html, body {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    font-family: 'Arial', sans-serif;*/
-/*    background-color: var(--primary-color);*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    flex-direction: column;*/
-/*}*/
 html {
     height: 100%;
     margin: 0;
@@ -105,6 +93,16 @@ footer {
     background-color: var(--highlight-color);
     color: var(--white-text);
 }
+
+/* 여기 추가 */
+.card:hover {
+    cursor: pointer;
+    border: 3px solid black;
+}
+
+/*.card.highlight:hover {*/
+/*    border: 3px solid black;*/
+/*}*/
 
 .icon {
     font-size: 2.5rem;
